# LLM-scenario-driven-whisper-finetuning

./: .dockerignore  .env.template  .gitignore  .repo-to-text-settings.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  repo-to-text_2025-01-20-08-52-28-UTC.txt
.github/workflows/: ci.yml
apps/curate_data/: README.md  exp.py  pyproject.toml  serving.py
apps/curate_data/prompts/v1/: user_prompt.txt
apps/curate_data/utils/: db.py  language_mapping.py
apps/data_curation/: README.md  main.py
apps/data_curation/api/: endpoints.py
apps/data_curation/prompts/v1/: system_prompt.txt
apps/data_curation/utils/: data_preparation.py  db.py  language_mapping.py  license_handler.py  llm_client.py  logger.py  tts_client.py  tts_client_fb.py
apps/serving/: main.py
apps/serving/utils/: inference_utils.py
apps/training/: README.md  fine_tuning.py  main.py
apps/training/utils/: training_utils.py
config/: repository.yaml
doc/: architecture.md
docker/: Dockerfile.data_curation  Dockerfile.serving  Dockerfile.training
docs/: notes.md
iac/docker/: Dockerfile.data_curation  Dockerfile.serving  Dockerfile.training
iac/k8s/: serving.yaml  storage.yaml  training.yaml
k8s/: data-curation.yaml  secrets.yaml
scripts/: generate_manifests.py  setup_k3d.sh
shared/clients/: api_client.py
shared/config/: app_config.py
shared/utils/: logger.py
